# rust-codebase

./: .dockerignore  .env.example  .gitignore  BACKEND_API_MALEE.md  Caddyfile  Caddyfile.local  Cargo.toml  Dockerfile  Dockerfile.dev  GEMINI.md  Makefile  README  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  prompt.md  rustfmt.toml
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  publish-ghcr.yml
crates/backmatter_worker/: Cargo.toml
crates/backmatter_worker/src/: main.rs
crates/frontmatter_api/: Cargo.toml
crates/frontmatter_api/src/: app.rs  main.rs  state.rs  telemetry.rs
crates/frontmatter_api/src/controllers/: error_controller.rs  health_controller.rs  mod.rs  validation_controller.rs
crates/frontmatter_api/src/controllers/api/v1/: contributions_controller.rs  mod.rs  ytdlp_controller.rs
crates/frontmatter_api/src/extractors/: json_validator.rs
crates/frontmatter_api/src/middleware/: api_key.rs  captcha.rs  cors.rs  rate_limit.rs
crates/frontmatter_api/src/routes/api/v1/: contributions_routes.rs
crates/frontmatter_api/src/services/: contributions.rs  mod.rs
crates/frontmatter_api/src/services/ytdlp/: mod.rs
crates/shared_core/: Cargo.toml
crates/shared_core/src/: config.rs  error.rs
crates/shared_core/src/db/: mod.rs  postgres.rs  redis.rs
crates/shared_core/src/models/: contributions.rs  github_dto.rs  mod.rs  ytdlp.rs  ytdlp_dto.rs
docs/: API.md
docs/images/: Themed-Architecture-Diagram-code.md
infra/common/: browse.html  cloud-init.template  prometheus.yml
infra/common/grafana/provisioning/dashboards/: api-health.json  captcha-security.json  default.yml  domain-services.json  security-overview.json  ytdlp-health.json
infra/digitalocean/accounts/naduns-team/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/digitalocean/components/: c-cloudflare-record.tf  c-cloudflare-zone.tf  c-digitalocean-firewall.tf  data.tf  locals.tf  outputs.tf  provider.tf  r-digitalocean_droplet.tf  r-digitalocean_volume.tf  r-digitalocean_volume_attachment.tf  variables.tf  versions.tf
postman/collections/Nadzu API/: Contributions (Default User).request.yaml  Contributions (Specific User).request.yaml  Health.request.yaml  Metrics.request.yaml  Root.request.yaml  Validate User.request.yaml  YT-DLP Download File.request.yaml  YT-DLP Enqueue (shorts URL).request.yaml  YT-DLP Enqueue (watch URL).request.yaml  YT-DLP Enqueue.request.yaml  YT-DLP Get Job By ID.request.yaml  YT-DLP List Jobs.request.yaml  YT-DLP Stream Job Progress.request.yaml  supported sites.request.yaml
postman/collections/Nadzu API/.resources/: definition.yaml
postman/collections/Nadzu API/.resources/YT-DLP Stream Job Progress.resources/examples/: YT-DLP Stream Job Progress.example.yaml
postman/collections/Nadzu API/Malee/: Kapruka List Categories.request.yaml  Malee Action (Setup Delivery).request.yaml  Malee Action.request.yaml  Malee Add To Cart.request.yaml  Malee Chat.request.yaml  Malee Delete Session.request.yaml  Malee Get Profile.request.yaml  Malee Get Session.request.yaml  Malee Track Order.request.yaml  Malee Update Profile.request.yaml
postman/collections/Nadzu API/Malee/Action Uses/: 01. Add To Cart.request.yaml  02. Set Quantity.request.yaml  03. Set Delivery City.request.yaml  04. Set Delivery Date.request.yaml  05. Set Gift Note.request.yaml  06. Set Language.request.yaml  07. Remove From Cart.request.yaml  08. Clear Cart.request.yaml
postman/environments/: Nadzu Local.environment.yaml  Nadzu Local.yaml  nadzu prod.environment.yaml
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/controllers/: error_controller.rs  health_controller.rs  mod.rs  root_controller.rs  validation_controller.rs
src/controllers/api/v1/: captcha_controller.rs  contributions_controller.rs  mod.rs  ytdlp_controller.rs
src/db/: postgres.rs  redis.rs
src/extractors/: json_validator.rs  mod.rs  validated_json.rs
src/middleware/: api_key.rs  auth.rs  captcha.rs  cors.rs  metrics.rs  mod.rs  rate_limit.rs
src/models/: captcha_model.rs  contributions_model.rs  github_dto.rs  health.rs  health_model.rs  mod.rs  validation.rs  validation_model.rs  ytdlp.rs  ytdlp_dto.rs  ytdlp_model.rs
src/models/malee/: cart.rs  checkout.rs  events.rs  mod.rs  profile.rs  session.rs
src/routes/: health_routes.rs  mod.rs  validation_routes.rs
src/routes/api/: mod.rs
src/routes/api/malee/: action.rs  chat.rs  mod.rs  profile.rs  session.rs  track.rs
src/routes/api/v1/: captcha_routes.rs  contributions_routes.rs  mod.rs  ytdlp_routes.rs
src/services/: contributions.rs  mod.rs
src/services/malee/: mod.rs  service.rs  session_store.rs
src/services/malee/cart/: reducer.rs
src/services/malee/checkout/: idempotency.rs  mod.rs  validate.rs
src/services/malee/connector/: client.rs  jsonrpc.rs  mod.rs  tools.rs  types.rs
src/services/malee/language/: detect.rs  dict.rs  mod.rs  normalize.rs
src/services/malee/llm/: client.rs  loop_.rs  mod.rs  phone.rs  pool.rs  pool_tests.rs  prompt.rs  retry.rs  state_machine.rs  tool_schemas.rs  tools.rs
src/services/malee/llm/prompt/: builder.rs  examples.rs  mod.rs
src/services/malee/llm/prompt/templates/: context.j2  examples.j2  language.j2  master.j2  persona.j2  rules.j2  tools.j2
src/services/malee/sse/: encoder.rs  parser.rs
src/services/ytdlp/: mod.rs
tests/: api_tests.rs  layer_unit_tests.rs  malee_unit_tests.rs
tests/api/: auth_tests.rs  captcha_tests.rs  common.rs  contributions_tests.rs  cors_tests.rs  health_tests.rs  malee_tests.rs  rate_limit_tests.rs  root_tests.rs  routing_tests.rs  validation_tests.rs  ytdlp_tests.rs
