[package]
name = "nadzu"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
dashmap = "6.1.0"
dotenvy = "0.15"
governor = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "fs"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
validator = { version = "0.20", features = ["derive"] }
url = "2.5.8"

[dev-dependencies]
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
