[package]
name = "nadzu"
version = "0.3.1"
edition = "2024"
authors = ["Nadun <nadun@nadzu.net>"]
description = "A high-performance YouTube downloader backend built with Axum and Rust."
repository = "https://github.com/nxdun/rust-codebase"
license = "MIT"
keywords = ["youtube-dl", "yt-dlp", "axum", "rust", "backend"]
categories = ["web-programming::http-server", "multimedia::video"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
dashmap = "6.1.0"
dotenvy = "0.15"
governor = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "fs"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.8"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
wiremock = "0.6.5"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
panic = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
