[workspace]
members = [
    "crates/shared_core",
    "crates/frontmatter_api",
    "crates/backmatter_worker"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
dashmap = "6.1.0"
dotenvy = "0.15"
governor = "0.10"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
regex = "1.11"
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "fs"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.8"
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
bb8 = "0.8"
bb8-redis = "0.17"
apalis = "0.6.4"
apalis-redis = "0.6.4"
uuid = { version = "1.10", features = ["v4", "serde"] }


[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
panic = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true