[package]
name = "backmatter_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_core = { path = "../shared_core" }
tokio = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
