[package]
name = "shared_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
tokio = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
uuid = { workspace = true }
